tensorflow/1.12/api_docs/python/tf/strings.md
<div itemscope itemtype="http://developers.google.com/ReferenceObject">
<meta itemprop="name" content="tf.strings" />
<meta itemprop="path" content="Stable" />
</div>

# Module: tf.strings



Defined in [`tensorflow/_api/v1/strings/__init__.py`](/code/stable/tensorflow/_api/v1/strings/__init__.py).

Operations for working with string Tensors.

See the [Strings](https://tensorflow.org/api_guides/python/string_ops) guide.

## Functions

[`format(...)`](../tf/strings/format.md): Formats a string template using a list of tensors.

[`join(...)`](../tf/strings/join.md): Joins the strings in the given list of string tensors into one tensor;

[`length(...)`](../tf/strings/length.md): String lengths of `input`.

[`reduce_join(...)`](../tf/strings/reduce_join.md): Joins a string Tensor across the given dimensions.

[`regex_full_match(...)`](../tf/strings/regex_full_match.md): Check if the input matches the regex pattern.

[`regex_replace(...)`](../tf/strings/regex_replace.md): Replaces the match of pattern in input with rewrite.

[`split(...)`](../tf/strings/split.md): Split elements of `source` based on `sep` into a `SparseTensor`.

[`strip(...)`](../tf/strings/strip.md): Strip leading and trailing whitespaces from the Tensor.

[`substr(...)`](../tf/strings/substr.md): Return substrings from `Tensor` of strings.

[`to_hash_bucket(...)`](../tf/strings/to_hash_bucket.md): Converts each string in the input Tensor to its hash mod by a number of buckets.

[`to_hash_bucket_fast(...)`](../tf/strings/to_hash_bucket_fast.md): Converts each string in the input Tensor to its hash mod by a number of buckets.

[`to_hash_bucket_strong(...)`](../tf/strings/to_hash_bucket_strong.md): Converts each string in the input Tensor to its hash mod by a number of buckets.

[`to_number(...)`](../tf/strings/to_number.md): Converts each string in the input Tensor to the specified numeric type.

[`unicode_script(...)`](../tf/strings/unicode_script.md): Determine the script codes of a given tensor of Unicode integer code points.

